re #56 - repaired the social links view to display correctly on mobile screens

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -116,7 +116,7 @@ body {
     position: absolute;
     cursor: pointer;
     left:74%;
-    top:6%;
+    top:5%;
 }
 
 .menu .profile {
